--- a/frontend/src/components/WhatsappLayout/styles.css
+++ b/frontend/src/components/WhatsappLayout/styles.css
@@ -460,16 +460,10 @@ body {
 /* Small Screens */
 
 @media (max-width: 768px) {
-  /* .marvel-device.nexus5 {
-    border-radius: 0;
-    flex: none;
-    padding: 0;
-    max-width: none;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-  } */
-  
+  .marvel-device.nexus5 {
+    background-color: transparent;
+  }
+
   .marvel-device.nexus5::before {
     display: none;
   }
@@ -493,6 +487,7 @@ body {
     right: 0;
     bottom: 0;
   }
+
   .conversation {
     height: calc(100vh - 55px);
   }
