--- a/frontend/src/components/WhatsappLayout/styles.css
+++ b/frontend/src/components/WhatsappLayout/styles.css
@@ -33,7 +33,7 @@ html {
 .marvel-device.nexus5 {
   padding: 50px 15px 50px 15px;
   width: 320px;
-  height: 568px;
+  height: 100%;
   background: #1e1e1e;
   border-radius: 20px;
 }
@@ -91,7 +91,7 @@ body {
 /* Chat */
 
 .chat {
-  height: calc(100% - 69px);
+  height: 100%;
 }
 
 .chat-container {
@@ -189,7 +189,7 @@ body {
 /* Conversation */
 
 .conversation {
-  height: calc(100% - 12px);
+  height: 80%;
   position: relative;
   background: #efe7dd url("https://cloud.githubusercontent.com/assets/398893/15136779/4e765036-1639-11e6-9201-67e728e86f39.jpg") repeat;
   z-index: 0;
@@ -236,7 +236,7 @@ body {
   margin: 8px 0;
   max-width: 85%;
   word-wrap: break-word;
-  z-index: -1;
+  z-index: 1;
 }
 
 .message:after {
@@ -462,6 +462,7 @@ body {
 @media (max-width: 768px) {
   .marvel-device.nexus5 {
     background-color: transparent;
+    min-height: 400px;
   }
 
   .marvel-device.nexus5::before {
@@ -481,6 +482,7 @@ body {
   }
 
   .screen-container {
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -489,9 +491,9 @@ body {
   }
 
   .conversation {
-    height: calc(100vh - 55px);
+    height: 80%;
   }
   .conversation .conversation-container {
-    height: calc(100vh - 120px);
+    height: 80%;
   }
 }
